--- a/.gitignore
+++ b/.gitignore
@@ -120,7 +120,7 @@ local.properties
 .idea/**/dynamic.xml
 .idea/**/uiDesigner.xml
 .idea/**/dbnavigator.xml
-
+.idea/
 # Gradle
 .idea/**/gradle.xml
 .idea/**/libraries
