fix some problem

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,4 +23,4 @@ spring.thymeleaf.suffix=.html
 
 spring.mvc.hiddenmethod.filter.enabled=true
 
-spring.resources.static-locations=classpath:/static/
+spring.web.resources.static-locations=classpath:/static/
