--- a/.gitignore
+++ b/.gitignore
@@ -209,3 +209,7 @@ fabric.properties
 .idea/**/azureSettings.xml
 
 # End of https://www.toptal.com/developers/gitignore/api/intellij
+
+
+
+uploadimages/
