--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,3 +24,6 @@ spring.thymeleaf.suffix=.html
 spring.mvc.hiddenmethod.filter.enabled=true
 
 spring.resources.static-locations=classpath:/static/
+
+spring.servlet.multipart.max-file-size=4MB
+spring.servlet.multipart.max-request-size=10MB
