--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,25 +1,21 @@
-ms sql
-spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=GoTrip
-spring.datasource.username=sa
-spring.datasource.password=sa123456
-
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
-spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.hibernate.ddl-auto=update
-
-
-#mysql
-#spring.datasource.username=root
+#ms sql
+#spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=GoTrip
+#spring.datasource.username=sa
 #spring.datasource.password=sa123456
-#spring.datasource.url=jdbc:mysql://localhost:3306/GoTrip
-#spring.datasource.driver-class-name= com.mysql.cj.jdbc.Driver
+#
 #spring.jpa.show-sql=true
-#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
 #spring.jpa.properties.hibernate.format_sql=true
 #spring.jpa.hibernate.ddl-auto=update
-
-
+#mysql
+spring.datasource.username=root
+spring.datasource.password=sa123456
+spring.datasource.url=jdbc:mysql://localhost:3306/GoTrip
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.hibernate.ddl-auto=update
 server.servlet.context-path=/gotrip
 spring.thymeleaf.cache=false
 spring.thymeleaf.check-template-location=true
@@ -30,12 +26,8 @@ spring.thymeleaf.encoding=UTF-8
 spring.thymeleaf.mode=HTML5
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
-
 spring.mvc.hiddenmethod.filter.enabled=true
-
-
 spring.web.resources.static-locations=classpath:/static/
-
 spring.servlet.multipart.max-file-size=4MB
 spring.servlet.multipart.max-request-size=10MB
 
