--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,25 @@
             <artifactId>fastjson</artifactId>
             <version>1.2.31</version>
         </dependency>
+         <dependency>
+    		<groupId>org.webjars</groupId>
+    		<artifactId>bootstrap</artifactId>
+    		<version>4.0.0-2</version>
+		</dependency>
+
+		<dependency>
+		    <groupId>org.webjars</groupId>
+		    <artifactId>bootstrap</artifactId>
+		    <version>4.3.1</version>
+		</dependency>
+
+		<dependency>
+		    <groupId>org.webjars</groupId>
+		    <artifactId>jquery</artifactId>
+		    <version>2.2.4</version>
+		</dependency>
+		
+
 	</dependencies>
 
 	<build>
