--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,20 +1,20 @@
 #ms sql
-#spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=GoTrip
-#spring.datasource.username=sa
-#spring.datasource.password=sa123456
-#spring.jpa.show-sql=true
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
-#spring.jpa.properties.hibernate.format_sql=true
-#spring.jpa.hibernate.ddl-auto=update
-#mysql
-spring.datasource.username=root
+spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=GoTrip
+spring.datasource.username=sa
 spring.datasource.password=sa123456
-spring.datasource.url=jdbc:mysql://localhost:3306/GoTrip
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.ddl-auto=update
+#mysql
+#spring.datasource.username=root
+#spring.datasource.password=sa123456
+#spring.datasource.url=jdbc:mysql://localhost:3306/GoTrip
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+#spring.jpa.properties.hibernate.format_sql=true
+#spring.jpa.hibernate.ddl-auto=update
 server.servlet.context-path=/gotrip
 spring.thymeleaf.cache=false
 spring.thymeleaf.check-template-location=true
