--- a/pom.xml
+++ b/pom.xml
@@ -109,7 +109,11 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
         </dependency>
-
+		<dependency>
+         <groupId>com.microsoft.sqlserver</groupId>
+         <artifactId>mssql-jdbc</artifactId>
+            <version>9.4.1.jre11</version><!--$NO-MVN-MAN-VER$-->
+        </dependency>
     </dependencies>
 
     <build>
