自動insert初始資料

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,8 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.defer-datasource-initialization=true
+spring.sql.init.mode=always
 #mysql
 #spring.datasource.username=root
 #spring.datasource.password=sa123456
@@ -30,4 +32,3 @@ spring.mvc.hiddenmethod.filter.enabled=true
 spring.web.resources.static-locations=classpath:/static/
 spring.servlet.multipart.max-file-size=4MB
 spring.servlet.multipart.max-request-size=10MB
-
