--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,7 @@ spring.datasource.password=sa123456
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
 spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.use_nationalized_character_data =true
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.defer-datasource-initialization=true
 spring.sql.init.mode=always
@@ -16,6 +17,10 @@ spring.sql.init.mode=always
 #spring.jpa.show-sql=true
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 #spring.jpa.properties.hibernate.format_sql=true
+#spring.jpa.properties.hibernate.use_nationalized_character_data =true
+#spring.jpa.hibernate.ddl-auto=create-drop
+#spring.jpa.defer-datasource-initialization=true
+#spring.sql.init.mode=always
 #spring.jpa.hibernate.ddl-auto=update
 
 server.servlet.context-path=/gotrip
@@ -32,3 +37,4 @@ spring.mvc.hiddenmethod.filter.enabled=true
 spring.web.resources.static-locations=classpath:/static/
 spring.servlet.multipart.max-file-size=4MB
 spring.servlet.multipart.max-request-size=10MB
+
