關聯新增成功  but 會多新增一行空白

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,14 +5,10 @@ spring.datasource.password=sa123456
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
 spring.jpa.properties.hibernate.format_sql=true
-<<<<<<< HEAD
+spring.jpa.properties.hibernate.use_nationalized_character_data=true
 spring.jpa.hibernate.ddl-auto=update
-=======
-spring.jpa.properties.hibernate.use_nationalized_character_data =true
-spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.defer-datasource-initialization=true
-spring.sql.init.mode=always
->>>>>>> 3bd1435f9c989f5e435e90e1381c895cdb2ae8dc
+#spring.sql.init.mode=always
 #mysql
 #spring.datasource.username=root
 #spring.datasource.password=sa123456
@@ -21,16 +17,11 @@ spring.sql.init.mode=always
 #spring.jpa.show-sql=true
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 #spring.jpa.properties.hibernate.format_sql=true
-<<<<<<< HEAD
-#spring.jpa.hibernate.ddl-auto=update
-=======
 #spring.jpa.properties.hibernate.use_nationalized_character_data =true
 #spring.jpa.hibernate.ddl-auto=create-drop
 #spring.jpa.defer-datasource-initialization=true
 #spring.sql.init.mode=always
 #spring.jpa.hibernate.ddl-auto=update
-
->>>>>>> 3bd1435f9c989f5e435e90e1381c895cdb2ae8dc
 server.servlet.context-path=/gotrip
 spring.thymeleaf.cache=false
 spring.thymeleaf.check-template-location=true
