--- a/pom.xml
+++ b/pom.xml
@@ -61,11 +61,16 @@
         </dependency>
         
 <!--    spring security -->
-<!--         <dependency> -->
-<!--             <groupId>org.springframework.boot</groupId> -->
-<!--             <artifactId>spring-boot-starter-security</artifactId> -->
-<!--         </dependency> -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
 
+        <dependency>
+            <groupId>org.thymeleaf.extras</groupId>
+            <artifactId>thymeleaf-extras-springsecurity5</artifactId>
+        </dependency>
+		
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>fastjson</artifactId>
@@ -88,11 +93,7 @@
             <artifactId>jquery</artifactId>
             <version>2.2.4</version>
         </dependency>
-
-        <!--  		 <dependency> -->
-        <!--              <groupId>org.springframework.boot</groupId> -->
-        <!--              <artifactId>spring-boot-starter-security</artifactId> -->
-        <!--          </dependency> -->
+        
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>fastjson</artifactId>
@@ -111,8 +112,30 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
         </dependency>
+        
+        <dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-validator</artifactId>
+			<version>5.1.2.Final</version>
+		</dependency>
 
+        <dependency>
+        	<groupId>org.springframework.boot</groupId>
+        	<artifactId>spring-boot-configuration-processor</artifactId>
+        	<optional>true</optional>
+        </dependency>
+        
+        <dependency>
+			   <groupId>jstl</groupId>
+			   <artifactId>jstl</artifactId>
+			   <version>1.2</version>
+        </dependency>
+        
+        
+        
     </dependencies>
+
+
 
     <build>
         <plugins>
