修正自動新增 資料

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,8 +6,9 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.use_nationalized_character_data=true
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.defer-datasource-initialization=true
+spring.sql.init.data-locations=classpath:data.sql
 spring.sql.init.mode=always
 #mysql
 #spring.datasource.username=root
