--- a/pom.xml
+++ b/pom.xml
@@ -66,10 +66,12 @@
             <artifactId>spring-boot-starter-security</artifactId>
         </dependency>
 
-        <dependency>
-            <groupId>org.thymeleaf.extras</groupId>
-            <artifactId>thymeleaf-extras-springsecurity5</artifactId>
-        </dependency>
+		<dependency>
+		    <groupId>org.thymeleaf.extras</groupId>
+		    <artifactId>thymeleaf-extras-springsecurity5</artifactId>
+		    <version>3.0.4.RELEASE</version><!--$NO-MVN-MAN-VER$-->
+		</dependency>
+
 
         <dependency>
             <groupId>com.alibaba</groupId>
