--- a/pom.xml
+++ b/pom.xml
@@ -33,11 +33,11 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
-        <dependency>
-            <groupId>com.microsoft.sqlserver</groupId>
-            <artifactId>mssql-jdbc</artifactId>
-            <version>9.4.1.jre11</version> <!--$NO-MVN-MAN-VER$-->
-        </dependency>
+<!--         <dependency> -->
+<!--             <groupId>com.microsoft.sqlserver</groupId> -->
+<!--             <artifactId>mssql-jdbc</artifactId> -->
+<!--             <version>9.4.1.jre11</version> $NO-MVN-MAN-VER$ -->
+<!--         </dependency> -->
 
         <!--                <dependency>-->
         <!--                    <groupId>mysql</groupId>-->
