--- a/pom.xml
+++ b/pom.xml
@@ -116,6 +116,22 @@
          <artifactId>mssql-jdbc</artifactId>
             <version>9.4.1.jre11</version><!--$NO-MVN-MAN-VER$-->
         </dependency>
+        <dependency>
+        <groupId>org.apache.logging.log4j</groupId>
+        <artifactId>log4j-core</artifactId>
+        <version>2.17.1</version>
+        <exclusions>
+            <exclusion>
+                <groupId>org.slf4j</groupId>
+                <artifactId>slf4j-log4j12</artifactId>
+            </exclusion>
+        </exclusions>
+</dependency>
+<dependency>
+        <groupId>org.apache.logging.log4j</groupId>
+        <artifactId>log4j-api</artifactId>
+        <version>2.17.1</version>
+</dependency>
     </dependencies>
 
     <build>
