--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,25 +1,25 @@
 #ms sql
-#spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=GoTrip
-#spring.datasource.username=sa
-#spring.datasource.password=sa123456
-#spring.jpa.show-sql=true
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
-#spring.jpa.properties.hibernate.format_sql=true
-#spring.jpa.properties.hibernate.use_nationalized_character_data=true
-#spring.jpa.hibernate.ddl-auto=create-drop
-#spring.jpa.defer-datasource-initialization=true
-#spring.sql.init.data-locations=classpath:data.sql
-#spring.sql.init.mode=always
-#mysql
-spring.datasource.username=root
+spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=GoTrip
+spring.datasource.username=sa
 spring.datasource.password=sa123456
-spring.datasource.url=jdbc:mysql://localhost:3306/GoTrip
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.use_nationalized_character_data=true
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.defer-datasource-initialization=true
+spring.sql.init.data-locations=classpath:data.sql
+spring.sql.init.mode=always
+#mysql
+#spring.datasource.username=root
+#spring.datasource.password=sa123456
+#spring.datasource.url=jdbc:mysql://localhost:3306/GoTrip
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+#spring.jpa.properties.hibernate.format_sql=true
+#spring.jpa.properties.hibernate.use_nationalized_character_data=true
+#spring.jpa.hibernate.ddl-auto=update
 #spring.sql.init.data-locations=classpath:data.sql
 #spring.jpa.defer-datasource-initialization=true
 #spring.sql.init.encoding=utf-8
@@ -39,3 +39,13 @@ spring.mvc.hiddenmethod.filter.enabled=true
 spring.web.resources.static-locations=classpath:/static/
 spring.servlet.multipart.max-file-size=4MB
 spring.servlet.multipart.max-request-size=15MB
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=aq855230@gmail.com
+spring.mail.password=farigrwpzvuiggrk
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.socketFactory.fallback=false
+#spring.mail.from.email=<aq855230@gmail.com>
+spring.main.allow-circular-references=true
