--- a/pom.xml
+++ b/pom.xml
@@ -136,6 +136,12 @@
 			<artifactId>log4j-api</artifactId>
 			<version>2.17.1</version>
 		</dependency>
+		
+	<dependency>
+      	<groupId>commons-io</groupId>
+      	<artifactId>commons-io</artifactId>
+      	<version>2.11.0</version>
+  	</dependency>
 	</dependencies>
 	<build>
 		<plugins>
